[gd_scene load_steps=10 format=3 uid="uid://bjx101jx8k5m2"]

[ext_resource type="Script" path="res://scripts/shelf3.gd" id="1_rch07"]
[ext_resource type="Texture2D" uid="uid://op6l3kpwayyb" path="res://backgrounds/shelf1.png" id="2_7k02n"]
[ext_resource type="Texture2D" uid="uid://dtr4sfx6brbi7" path="res://assets/shelf3.PNG" id="3_07fqg"]
[ext_resource type="Texture2D" uid="uid://ds28rtg6kv7a8" path="res://assets/bookonShelf.PNG" id="4_7ylun"]
[ext_resource type="Texture2D" uid="uid://dwea1tcxmwpgr" path="res://assets/Paint Layer 53.PNG" id="4_yoofk"]
[ext_resource type="PackedScene" uid="uid://bfgf2cqi0s3hj" path="res://main.tscn" id="5_mfbc1"]
[ext_resource type="FontFile" uid="uid://p5sc35hddxrq" path="res://UIFiles/FanwoodText-Regular.ttf" id="6_odgf3"]
[ext_resource type="PackedScene" uid="uid://v4mtgnurrhwf" path="res://demoComplete.tscn" id="8_aqc72"]
[ext_resource type="PackedScene" uid="uid://ctdturmftxxx3" path="res://end.tscn" id="9_1y20r"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_rch07")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_7k02n")

[node name="items" type="TextureRect" parent="TextureRect"]
layout_mode = 0
offset_left = 148.0
offset_top = 373.0
offset_right = 1822.0
offset_bottom = 896.0
texture = ExtResource("3_07fqg")

[node name="TextureRect" type="TextureRect" parent="TextureRect/items"]
layout_mode = 0
offset_left = 1067.0
offset_top = 51.0
offset_right = 1473.0
offset_bottom = 138.0
texture = ExtResource("4_yoofk")

[node name="journal" type="TextureRect" parent="TextureRect"]
visible = false
layout_mode = 0
offset_left = 355.0
offset_top = 429.0
offset_right = 720.0
offset_bottom = 775.0
texture = ExtResource("4_7ylun")

[node name="bookStand" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 186.0
offset_top = 382.0
offset_right = 944.0
offset_bottom = 872.0

[node name="box" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1088.0
offset_top = 421.0
offset_right = 1842.0
offset_bottom = 865.0

[node name="code1" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1213.0
offset_top = 519.0
offset_right = 1297.0
offset_bottom = 636.0

[node name="code2" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1309.0
offset_top = 526.0
offset_right = 1397.0
offset_bottom = 634.0

[node name="code3" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1425.0
offset_top = 524.0
offset_right = 1513.0
offset_bottom = 632.0

[node name="code4" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 1532.0
offset_top = 519.0
offset_right = 1620.0
offset_bottom = 627.0

[node name="main" parent="." instance=ExtResource("5_mfbc1")]

[node name="Label" type="Label" parent="."]
offset_left = 1206.0
offset_top = 516.0
offset_right = 1293.0
offset_bottom = 633.0
theme_override_colors/font_color = Color(0.164706, 0.133333, 0.0862745, 1)
theme_override_fonts/font = ExtResource("6_odgf3")
theme_override_font_sizes/font_size = 85
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
offset_left = 1316.0
offset_top = 516.0
offset_right = 1403.0
offset_bottom = 633.0
theme_override_colors/font_color = Color(0.164706, 0.133333, 0.0862745, 1)
theme_override_fonts/font = ExtResource("6_odgf3")
theme_override_font_sizes/font_size = 85
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label3" type="Label" parent="."]
offset_left = 1423.0
offset_top = 518.0
offset_right = 1510.0
offset_bottom = 635.0
theme_override_colors/font_color = Color(0.164706, 0.133333, 0.0862745, 1)
theme_override_fonts/font = ExtResource("6_odgf3")
theme_override_font_sizes/font_size = 85
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label4" type="Label" parent="."]
offset_left = 1535.0
offset_top = 520.0
offset_right = 1622.0
offset_bottom = 637.0
theme_override_colors/font_color = Color(0.164706, 0.133333, 0.0862745, 1)
theme_override_fonts/font = ExtResource("6_odgf3")
theme_override_font_sizes/font_size = 85
horizontal_alignment = 1
vertical_alignment = 1

[node name="Node2D" parent="." instance=ExtResource("8_aqc72")]
visible = false

[node name="end" parent="." instance=ExtResource("9_1y20r")]

[connection signal="pressed" from="bookStand" to="." method="_on_book_stand_pressed"]
[connection signal="pressed" from="box" to="." method="_on_box_pressed"]
